# pdf-to-cbz-converter2

./: .gitignore  ARCHITECTURE.md  AUDIT_DEPENDENCIES.md  BENCHMARK_COMPLETE.md  BUILD_TEST_REPORT.md  CLI-README.md  CLI_TEST_REPORT.md  Cargo-cli.toml  FINAL_REPORT.md  GUI-README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  MACOS_DIALOG_FIX.md  MULTITHREADING_BENCHMARK.md  OPTIMIZATION_SUMMARY.md  PDF_CBZ_RENDERING_FIX.md  PDF_THUMBNAIL_FIX.md  PERFORMANCE_BENCHMARK.md  PROJECT_INSTRUCTIONS.md  PROJECT_SUMMARY.md  QUALITY_LOSSLESS_REPORT.md  README-V3.md  README.md  REFACTORING-COMPLETE.md  ROOT_CAUSE_FIX.md  TODO.md  USAGE-GUIDE.md  VERSION  benchmark.sh  dev.sh  install-cli.sh  install.sh  monitor-gui.sh  package-lock.json  package.json  start-gui.ps1  start.sh  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  GUIDE_CLI.md  GUIDE_DEVELOPPEUR.md  GUIDE_GUI.md  GUIDE_UTILISATEUR.md
docs/archive/: GUI_ADAPTATION.md  MIGRATION-SUMMARY.md  REFACTORING.md
resources/pdfium/: README.md
samples/: Vers_les_Etoiles_BD.cbr  Vers_les_Etoiles_BD.cbz
scripts/: clean.mjs  download-pdfium.sh  preflight.mjs  test-build.sh
src/: App.tsx  main.tsx
src-cli/: Cargo.toml  archive.rs  benchmark.rs  direct_extract.rs  image.rs  main.rs  pdf.rs  pdfium_loader.rs
src-gui/: Cargo.toml  README_DEPRECATED.md  app.js  index.html  style.css  tauri.conf.json
src-gui/src/: main.rs
src-lib/: Cargo.toml
src-lib/src/: conversion.rs  direct_extract.rs  lib.rs  pdfium_loader.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: performance_test.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: test_conversion.rs  test_render.rs  verify_scaling.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cbz_analysis.rs  conversion.rs  mod.rs  pdf_analysis.rs  preview.rs
src-tauri/src/models/: cbz.rs  conversion.rs  mod.rs  pdf.rs
src-tauri/src/utils/: archive.rs  crash_handler.rs  ghostscript_renderer.rs  image_processor.rs  imagemagick_converter.rs  mod.rs  pdf_content_analyzer.rs  pdf_creator.rs  pdf_extractor.rs  pdf_renderer.rs  pdfium_loader.rs  pdfium_loader_gui.rs
src/components/: LanguageSelector.tsx
src/lib/: tauri-client.ts  translations.ts  useTranslation.ts
src/pages/: batch.tsx  batch.tsx.nextjs.backup  debug.tsx  page.tsx  page.tsx.nextjs.backup
src/styles/: globals.css
