[package]
name = "pdf-to-cbz-gui"
version = "3.0.0"
description = "PDF to CBZ Converter - GUI (wraps CLI)"
edition = "2021"
authors = ["Vincent Cruvellier"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
