[package]
name = "pdf-conversion-lib"
version = "0.1.0"
edition = "2021"
description = "Shared PDF conversion library for CLI and Tauri"

[dependencies]
# PDF Processing
pdfium-render = "0.8"

# Image Processing
image = { version = "0.25", features = ["jpeg", "png"] }
imagesize = "0.13"

# Archive Operations
zip = { version = "2.2", features = ["deflate"] }

# PDF Creation
printpdf = "0.7"

# Utilities
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"
