[package]
name = "pdf-to-cbz-converter"
version = "1.0.0"
description = "PDF to CBZ Converter - Desktop Application"
authors = ["Vincent Cruvellier"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pdf_to_cbz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared library
pdf-conversion-lib = { path = "../src-lib" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# PDF Processing
pdfium-render = "0.8"
lopdf = "0.34"  # For direct PDF image extraction

# Image Processing
image = { version = "0.25", features = ["jpeg", "png"] }
imagesize = "0.13"  # Fast image dimension reading without decoding

# Archive Operations
zip = { version = "2.2", features = ["deflate"] }

# PDF Creation (for CBZ to PDF conversion)
printpdf = "0.7"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
lazy_static = "1.5"  # For global caches and static data storage
once_cell = "1"  # For lazy static initialization
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.10"  # For parallel processing
tempfile = "3"  # For temporary directories in Ghostscript conversion
chrono = "0.4"  # For timestamps in crash logging

# Platform-specific dependencies for memory monitoring
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
